Fix crash when activating VPN connection.

std::sort() expects the lambda to return true if left is less than right, but
it returns true when they are equal too. According to this [1] that can lead to
an unsorted array internally and that can lead to a crash like this one.

[1] http://stackoverflow.com/questions/7767998/should-stdsort-work-with-lambda-function-in-c0x-c11

BUG: 366164